# sora

./: CMakeLists.txt  g_game.c  g_game.h  s_camera.c  s_camera.h  s_debug.c  s_debug.h  s_main.c  s_shared.h  sora.h  sora.txt
common/: file_obj_loader.c  file_obj_loader.h  file_utils.c  file_utils.h  math3d.c  math3d.h  opengl_structs.h
renderer/: renderer.h
